Posting/Getting todo items complete

--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 	<div>
 		A Todo List
 		<div id="todo-error"></div>
-		<form onsubmit=""></form>
-		<div id="todos"></div>
+
+		<!-- <form onsubmit=""></form> -->
+		<div id="todo-form-container">
+			<!-- Full Todo form injected here -->
+		</div>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
