Got todos working again. Did some refactoring

--- a/index.html
+++ b/index.html
@@ -26,25 +26,17 @@
 		<div id="todo-error"></div>
 
 		<!-- <form onsubmit=""></form> -->
-		<div id="todo-form-container">
+		<div id="todo-form-template">
 			<!-- Full Todo form injected here -->
+			<!-- <div id="todo-form">
+				<div id="todo-items-template">
 
-
-<div class="input-group mb-3">
-	<div class="input-group-prepend">
-		<div class="input-group-text">
-			<input id="check-5d69a86445ba8700149202b2"
-				onchange="app.controllers.todoController.toggleTodoStatus('5d69a86445ba8700149202b2')" type="checkbox">
+				</div>
+			</div> -->
 		</div>
-	</div>
-	<input id="text-5d69a86445ba8700149202b2" type="text" class="form-control " value="New Item" readonly>
-	<div class="input-group-append">
-		<button onclick="app.controllers.todoController.removeTodo('5d69a86445ba8700149202b2')" type="button"
-			class="btn btn-danger">X</button>
-	</div>
-</div>
 
-
+		<div id="weather-template">
+			<!-- Weather Template Injected Here -->
 		</div>
 	</div>
 
