Backend done. Quote, image, weather, todos

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 		<div id="weather-template">
 			<!-- Weather Template Injected Here -->
 		</div>
+
+		<div id="quote-template">
+			<!-- Quote Template Injected Here -->
+		</div>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
