All but todo count is done

--- a/index.html
+++ b/index.html
@@ -9,40 +9,36 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body id="bg-image">
-	<div id="weather">
-		Your Weather Template
-	</div>
-
-	<div id="quote">
-		The Quote
-	</div>
-
-	<div>
-		A Todo List
-		<div id="todo-error"></div>
-
-		<!-- <form onsubmit=""></form> -->
+	<div style="width: 100%">
 		<div id="todo-form-template">
 			<!-- Full Todo form injected here -->
-			<!-- <div id="todo-form">
-				<div id="todo-items-template">
-
-				</div>
-			</div> -->
+			<!-- <div id="todo-form"> -->
+			<!-- <div id="todo-items-template"> -->
+			<!-- Todo Items... -->
+			<!-- </div> -->
+			<!-- </div> -->
 		</div>
 
-		<div id="weather-template">
+		<div id="weather-template" class="tile">
 			<!-- Weather Template Injected Here -->
 		</div>
+	</div>
 
-		<div id="quote-template">
+	<div class="q-flex">
+		<div id="quote-template" class="tile">
 			<!-- Quote Template Injected Here -->
 		</div>
 	</div>
+
+
+
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
 	<script type="module" src="app/main.js"></script>
